--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"bits-ui": "^0.22.0",
-		"lucide-svelte": "^0.473.0",
+		"lucide-svelte": "^0.474.0",
 		"mode-watcher": "^0.5.0",
-		"svelte-radix": "^2.0.1"
+		"svelte-radix": "^2.0.1",
+		"sveltekit-i18n": "^2.4.2"
 	}
 }
