--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.9",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11",
@@ -43,7 +44,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"bits-ui": "^0.22.0",
+		"bits-ui": "^1.0.0-next.78",
 		"lucide-svelte": "^0.474.0",
 		"mode-watcher": "^0.5.0",
 		"svelte-radix": "^2.0.1",
