--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
+		"vaul-svelte": "^1.0.0-next.3",
 		"vite": "^5.4.11",
 		"vitest": "^2.0.4"
 	},
@@ -44,7 +45,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"bits-ui": "^1.0.0-next.79",
+		"bits-ui": "^1.0.0-next.84",
 		"lucide-svelte": "^0.474.0",
 		"mode-watcher": "^0.5.0",
 		"svelte-radix": "^2.0.1",
