--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-vercel": "^5.5.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/three": "^0.173.0",
 		"autoprefixer": "^10.4.20",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
@@ -31,13 +32,14 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.9",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vaul-svelte": "^1.0.0-next.3",
+		"vaul-svelte": "^1.0.0-next.6",
 		"vite": "^5.4.11",
 		"vitest": "^2.0.4"
 	},
@@ -47,10 +49,15 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"bits-ui": "^1.0.0-next.84",
-		"lucide-svelte": "^0.474.0",
-		"mode-watcher": "^0.5.0",
+		"@threlte/core": "^8.0.1",
+		"bits-ui": "^1.3.0",
+		"formsnap": "^2.0.0",
+		"lucide-svelte": "^0.475.0",
+		"mode-watcher": "^0.5.1",
 		"svelte-radix": "^2.0.1",
-		"sveltekit-i18n": "^2.4.2"
+		"sveltekit-i18n": "^2.4.2",
+		"sveltekit-superforms": "^2.23.1",
+		"three": "^0.173.0",
+		"zod": "^3.24.2"
 	}
 }
